# afcon-predictor

./: .gitignore  README.md  TASK_LIST.md  pyproject.toml  requirements.txt  run_pipeline.bat  run_pipeline.py
api/: main.py
archive (1)/: goalscorers.csv
data/raw/: afcon_2025_results.csv  fifa_ranking.csv  matches.csv  squad_values.csv
notebooks/: 01_exploration.ipynb  02_feature_engineering.ipynb
src/: config.py
src/data/: clean_fifa.py  clean_goals.py  clean_matches.py  load_data.py  merge_fifa.py  validate_data.py
src/features/: context_features.py  elo_features.py  fifa_features.py  form_features.py  h2h_features.py  squad_features.py  travel_features.py
src/models/: backtest.py  evaluate.py  explain_model.py  predict.py  predict_afcon.py  simulate_tournament.py  train.py  train_baseline.py  tune_hyperparameters.py
src/utils/: constants.py  geo_data.py  team_name_map.py
src/visualization/: dashboard.py
